--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
+*.rar filter=lfs diff=lfs merge=lfs -text
+*.tar.gz filter=lfs diff=lfs merge=lfs -text
 last[[:space:]]-[[:space:]]副本/bs-frontend-template/node_modules.rar filter=lfs diff=lfs merge=lfs -text
 t3/t3_1/data/cifar-10-python.tar.gz filter=lfs diff=lfs merge=lfs -text
